# ilexicon

./: .gitignore  README.md  pyproject.toml
http/: word.http
ilexicon/: __init__.py  app.py  base.py  exception.py  id.py
ilexicon-web/: package.json
ilexicon-web/src/: routes.ts
ilexicon-web/src/locale/: index.ts
ilexicon-web/src/pages/: layout.tsx
ilexicon-web/src/pages/lexicon/term/: constants.tsx  form.tsx  index.tsx
ilexicon-web/src/pages/lexicon/term/edit/: index.tsx
ilexicon-web/src/pages/lexicon/term/mock/: index.ts
ilexicon-web/src/store/: word.d.ts
ilexicon-web/src/utils/: route.ts
ilexicon/api/: __init__.py  domain.py  model.py  term.py  word.py
ilexicon/service/: dao.py
tests/api/: word_test.py
